# cargo-crate-example

./: Cargo.toml  NOTICE
.github/workflows/: close-release-pr.yml  release-pr.yml  test.yml
autopp_inc/: Cargo.toml  README.md
autopp_inc/src/: add.rs
autopp_inc_cli/: Cargo.toml
autopp_inc_cli/src/: main.rs
src/: lib.rs  main.rs
