[package]
name = "autopp_inc"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "example package"

[features]
default = []
cli = ["clap"]

[[bin]]
name = "autopp-inc"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"], optional = true}
